Fixed link colors and horizontal scrollbar on mobile

--- a/css/creative.css
+++ b/css/creative.css
@@ -33,7 +33,7 @@ a {
 
 a:hover,
 a:focus {
-    color: white;
+    opacity: 0.7;
 }
 
 #about a {
@@ -930,7 +930,7 @@ body {
   .clients-mobile-nav {
     display: block; } }
 .section-contact {
-  text-align: center; 
+  text-align: center;
   background: #bd252a;}
 
 .social-links {
@@ -1002,7 +1002,7 @@ body {
 .biglink {
   display: inline-block;
   color: #fff;
-  font-size: 40px !important;
+  /* font-size: 40px !important; */
   font-weight: 300;
   line-height: 1;
   width: 90%;
